working confirmacao de senha no cadastro

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -16,6 +16,7 @@
     <form id="auth-form">
       <input type="email" id="email" placeholder="Email" required />
       <input type="password" id="password" placeholder="Senha" required />
+      <input type="password" id="confirm-password" placeholder="Confirme a Senha" style="display: none;" />
       <button type="submit" id="login-btn">Entrar</button>
     </form>
     <a href="#" id="register-link">Cadastrar-se</a>
