--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -22,9 +22,8 @@
     <a href="#" id="register-link">Cadastrar-se</a>
     <a href="#" id="login-link" style="display: none;">Voltar ao Login</a>
   </div>
-  <div id="content-container">
-    <h1>Bem-vindo ao sistema!</h1>
-    <button id="logout-btn">Sair</button>
+  <div id="loading-overlay">
+    <div id="loading-spinner"></div>
   </div>
   <script src="app.js"></script>
 </body>
