blinking heart replacing circle

--- a/backend/public/home.html
+++ b/backend/public/home.html
@@ -61,7 +61,7 @@
     </div>
   </div>
   <div id="loading-overlay">
-    <div id="loading-spinner"></div>
+    <div id="loading-heart"></div>
   </div>
   <div id="tabs">
     <button class="tab-button" data-tab="home"><i class="fas fa-home"></i></button>
