--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -23,7 +23,7 @@
     <a href="#" id="login-link" style="display: none;">Voltar ao Login</a>
   </div>
   <div id="loading-overlay">
-    <div id="loading-spinner"></div>
+    <div id="loading-heart"></div>
   </div>
   <script src="app.js"></script>
 </body>
