padding interno nas tabs

--- a/backend/public/home.html
+++ b/backend/public/home.html
@@ -26,30 +26,34 @@
   </div>
   <div id="tab-content">
     <div class="tab-content" id="home-tab">
-      <h1>Bem vindo!</h1>
+      <div class="tab-content-padded">
+        <h1>Bem vindo!</h1>
+      </div>
     </div>
     <div class="tab-content" id="buscar-tab" style="display: none;">
+      <div class="tab-content-padded">
       <h1>Buscar Produtos da Horta</h1>
       <p>Em breve você poderá buscar produtos da horta aqui!</p>
       <p>Por enquanto, aproveite para conhecer mais sobre a nossa horta e agendar a coleta de resíduos.</p>
-      <p>Seja bem-vindo!</p>
-      <p>Colhendo o Futuro</p>
-      <p>🌱</p>
-      <p>🌻</p>
-      <br><br><br><br><br><br>
-      <p>Em breve você poderá buscar produtos da horta aqui!</p>
-      <p>Por enquanto, aproveite para conhecer mais sobre a nossa horta e agendar a coleta de resíduos.</p>
-      <p>Seja bem-vindo!</p>
-      <p>Colhendo o Futuro</p>
-      <p>🌱</p>
-      <p>🌻</p>
-      <p>Em breve você poderá buscar produtos da horta aqui!</p>
-      <p>Por enquanto, aproveite para conhecer mais sobre a nossa horta e agendar a coleta de resíduos.</p>
-      <p>Seja bem-vindo!</p>
-      <p>Colhendo o Futuro</p>
-      <p>🌱</p>
-      <p>🌻</p>
-      <br><br><br><br><br><br>
+        <p>Seja bem-vindo!</p>
+        <p>Colhendo o Futuro</p>
+        <p>🌱</p>
+        <p>🌻</p>
+        <br><br><br><br><br><br>
+        <p>Em breve você poderá buscar produtos da horta aqui!</p>
+        <p>Por enquanto, aproveite para conhecer mais sobre a nossa horta e agendar a coleta de resíduos.</p>
+        <p>Seja bem-vindo!</p>
+        <p>Colhendo o Futuro</p>
+        <p>🌱</p>
+        <p>🌻</p>
+        <p>Em breve você poderá buscar produtos da horta aqui!</p>
+        <p>Por enquanto, aproveite para conhecer mais sobre a nossa horta e agendar a coleta de resíduos.</p>
+        <p>Seja bem-vindo!</p>
+        <p>Colhendo o Futuro</p>
+        <p>🌱</p>
+        <p>🌻</p>
+        <br><br><br><br><br><br>
+      </div>
       <!-- Add content for Buscar tab here -->
     </div>
     <div class="tab-content" id="coleta-tab" style="display: none;">
