add padding to tab content in home.html

--- a/backend/public/home.html
+++ b/backend/public/home.html
@@ -57,11 +57,15 @@
       <!-- Add content for Buscar tab here -->
     </div>
     <div class="tab-content" id="coleta-tab" style="display: none;">
-      <h1>Agendar Coleta de Resíduos</h1>
+      <div class="tab-content-padded">
+        <h1>Agendar Coleta de Resíduos</h1>
+      </div>
       <!-- Add content for Coleta tab here -->
     </div>
     <div class="tab-content" id="conta-tab" style="display: none;">
-      <h1>Informações da Conta</h1>
+      <div class="tab-content-padded">
+        <h1>Informações da Conta</h1>
+      </div>
       <!-- Add content for Conta tab here -->
     </div>
   </div>
