exibindo informacoes da conta

--- a/backend/public/home.html
+++ b/backend/public/home.html
@@ -65,6 +65,10 @@
     <div class="tab-content" id="conta-tab" style="display: none;">
       <div class="tab-content-padded">
         <h1>Informações da Conta</h1>
+        <div id="user-info">
+          <!-- User information will be displayed here -->
+        </div>
+        <button id="logout-btn-conta">Sair</button> <!-- Add logout button -->
       </div>
       <!-- Add content for Conta tab here -->
     </div>
