update header text to uppercase and adjust color scheme for better visibility

--- a/backend/public/home.html
+++ b/backend/public/home.html
@@ -10,7 +10,7 @@
 </head>
 <body class="home">
   <div id="top-bar">
-    <h1>Colhendo o Futuro</h1>
+    <h1>COLHENDO O FUTURO</h1>
   </div>
   <button id="menu-btn">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
