Opcao de Administracao de acordo com a ROLE ADMIN e opcao de sair na parte de baixo

--- a/backend/public/home.html
+++ b/backend/public/home.html
@@ -23,7 +23,9 @@
     <a href="#">Home</a>
     <a href="#">Perfil</a>
     <a href="#">Configurações</a>
-    <a href="#" id="logout-btn">Sair</a>
+    <div id="logout-container">
+      <a href="#" id="logout-btn">Sair</a>
+    </div>
   </div>
   <div id="tab-content">
     <div class="tab-content" id="home-tab">
