update title and add top bar with floating image for enhanced branding

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Autenticação</title>
-  <style>
-  </style>
+  <title>Autenticação - Colhendo o Futuro</title>
   <link rel="stylesheet" href="styles.css">
-
 </head>
 <body>
+  <div id="top-bar">
+    <h1>COLHENDO O FUTURO</h1>
+    <img id="floating-image" src="coracao-low.png" alt="Floating Image">
+  </div>
   <div id="auth-container">
     <h1 id="form-title">Login</h1>
     <div id="message-box" style="visibility: hidden; margin-bottom: 10px;"></div>
