Melhorias tela de login

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Autenticação - Colhendo o Futuro</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      overflow: hidden; /* Prevent any scrolling */
+    }
+  </style>
 </head>
 <body>
   <div id="top-bar">
