Add bottom bar with news ticker for collected waste data

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -31,6 +31,11 @@
   <div id="loading-overlay">
     <div id="loading-heart"></div>
   </div>
+  <div id="bottom-bar">
+    <div id="news-ticker">
+      <p>Resíduos Coletados: <span>500</span> kg em Janeiro | <span>600</span> kg em Fevereiro | <span>700</span> kg em Março | <span>800</span> kg em Abril | <span>900</span> kg em Maio | <span>1000</span> kg em Junho</p>
+    </div>
+  </div>
   <script src="app.js"></script>
 </body>
 </html>
