Ensure full height for body and html elements, preventing scrolling

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -6,7 +6,8 @@
   <title>Autenticação - Colhendo o Futuro</title>
   <link rel="stylesheet" href="styles.css">
   <style>
-    body {
+    html, body {
+      height: 100%; /* Ensure the body and html take the full height */
       overflow: hidden; /* Prevent any scrolling */
     }
   </style>
