distincao de cores da topbar na area de adm

--- a/backend/public/adm.html
+++ b/backend/public/adm.html
@@ -9,8 +9,8 @@
   <script src="adm.js"></script>
 </head>
 <body class="admin">
-  <div id="top-bar">
-    <h1>Administração - Colhendo o Futuro</h1>
+  <div id="top-bar-adm">
+    <h1>Administração</h1>
   </div>
   <button id="menu-btn">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
