Alterar texto de "Home" para "Início" nos links de navegação

--- a/backend/public/adm.html
+++ b/backend/public/adm.html
@@ -19,7 +19,7 @@
   </button>
   <img id="floating-image" src="coracao-low.png" alt="Floating Image">
   <div id="sidebar">
-    <a href="home.html">Voltar para Home</a> <!-- Link to return to home area -->
+    <a href="home.html">Início</a> <!-- Link to return to home area -->
     <a href="#" data-tab="dashboard">Dashboard</a>
     <a href="#" data-tab="usuarios">Usuários</a>
     <a href="#" data-tab="configuracoes">Configurações</a>
