--- a/backend/public/home.html
+++ b/backend/public/home.html
@@ -20,7 +20,7 @@
   </button>
   <img id="floating-image" src="coracao-low.png" alt="Floating Image">
   <div id="sidebar">
-    <a href="#" data-tab="home">Home</a>
+    <a href="#" data-tab="home">Início</a>
     <a href="#" data-tab="buscar">Buscar Produtos</a>
     <a href="#" data-tab="coleta">Coleta de Resíduos</a>
     <a href="#" data-tab="conta">Informações da Conta</a>
